--- a/Biruang/index.html
+++ b/Biruang/index.html
@@ -63,7 +63,7 @@
         </li>
     </ul>
 </div>
-<div class="block3_main">
+<div class="block3_main center_main clearfix">
     <article>
         <img src="images/img31.jpg" alt="">
         <h2><a href="">FOOTBALL SHOES</a></h2>
