--- a/Biruang/index.html
+++ b/Biruang/index.html
@@ -82,9 +82,9 @@
             vivamus congue nulla leo, quis imperdiet magna</p>
     </article>
 </div>
-<section class="block4-section">
+<section class="block4-section center_main">
     <h2>POPULAR PRODUCTS</h2>
-    <div class="block4-maine">
+    <div class="block4-maine clearfix">
         <article>
             <img src="images/img41.jpg" alt="">
                 <div class="block4-maine-content">
