--- a/Biruang/index.html
+++ b/Biruang/index.html
@@ -93,7 +93,7 @@
                     <p>The Nike Tailwind Loose Women's Running Tank
                         Top is made with sweat-wicking fabric to help you
                         stay dry and comfortable on your run.</p>
-                    <p class="basket">
+                    <p class="price-basket clearfix">
                         <span class="price">$ 36.99</span>
                         <span class="basket-btn"><a href="#"><img src="images/Plus_icon.jpg" alt=""></a></span>
                     </p>
@@ -108,7 +108,7 @@
                         soft, sweat-wicking fabric and a regular fit for total
                         comfort during any workout.
                     </p>
-                    <p class="basket">
+                    <p class="price-basket clearfix">
                         <span class="price">$ 49.99</span>
                         <span class="basket-btn"><a href="#"><img src="images/Plus_icon.jpg" alt=""></a></span>
                     </p>
@@ -122,7 +122,7 @@
                     <p>The Nike I-Beam Swoosh Women's Sports Top
                         features a built-in bra and mesh back panel for
                         lightweight support and targeted breathability.</p>
-                    <p class="basket">
+                    <p class="price-basket clearfix">
                         <span class="price">$ 70.00</span>
                         <span class="basket-btn"><a href="#"><img src="images/Plus_icon.jpg" alt=""></a></span>
                     </p>
@@ -137,7 +137,7 @@
                         lightweight Dri-FIT fabric and features a perforated
                         back panel for comfort and enhanced breathability.
                     </p>
-                    <p class="basket">
+                    <p class="price-basket clearfix">
                         <span class="price">$ 28.49</span>
                         <span class="basket-btn"><a href="#"><img src="images/Plus_icon.jpg" alt=""></a></span>
                     </p>
