--- a/Biruang/index.html
+++ b/Biruang/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/unslider.css">
     <link rel="stylesheet" href="css/unslider-dots.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
-    <title>Company name - home page</title>
+    <title>Biruang</title>
 </head>
 <body>
 <header>
