--- a/Biruang/index.html
+++ b/Biruang/index.html
@@ -180,6 +180,17 @@
         </div>
     </div>
 </div>
+<div class="subscribe">
+    <div class="center_main clearfix">
+        <h2><strong>Sign up</strong> for exclusive sales and product news</h2>
+        <div class="subscribe-form">
+            <form action="" method="get">
+                <input type="email" class="email-inp" placeholder="eony321v@gmail.com">
+                <input type="submit" class="submit-inp" value="sign up">
+            </form>
+        </div>
+    </div>
+</div>
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/unslider-min.js"></script>
 <script>
