--- a/Biruang/index.html
+++ b/Biruang/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-    <div class="center_main">
+    <div class="centr_main">
         <div class="h_top clearfix">
             <p class="logo">BIRUANG</p>
             <div class="cont_basket">
@@ -40,7 +40,7 @@
         </div>
     </div>
 </header>
-<div class="my-slider center_main">
+<div class="my-slider centr_main">
     <ul>
         <li>
             <h2>RIGHT IS PINK. <br>LEFT IS BLUE</h2>
@@ -62,7 +62,7 @@
         </li>
     </ul>
 </div>
-<div class="block3_main center_main clearfix">
+<div class="block3_main centr_main clearfix">
     <article>
         <img src="images/img31.jpg" alt="">
         <h2><a href="">FOOTBALL SHOES</a></h2>
@@ -82,7 +82,7 @@
             vivamus congue nulla leo, quis imperdiet magna</p>
     </article>
 </div>
-<section class="block4-section center_main">
+<section class="block4-section centr_main">
     <h2>POPULAR PRODUCTS</h2>
     <div class="block4-maine clearfix">
         <article>
@@ -153,7 +153,7 @@
         </article>
     </div>
 </section>
-<div class="about center_main clearfix">
+<div class="about centr_main clearfix">
     <article>
         <h2>About</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam dictum lectus sit amet varius pulvinar. Proin
@@ -175,13 +175,13 @@
     <div class="map">
         <div class="mapin">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9937.902249901817!2d31.30558322665208!3d51.486139984228224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46d548e5c661ba9f%3A0x369b35a159893d97!2z0JjRgdGC0L7RgNC40YfQtdGB0LrQuNC1INC_0YPRiNC60Lgg0JLQsNC70LA!5e0!3m2!1sru!2sua!4v1515612022095"
-                     frameborder="0" style="border:0" allowfullscreen>
+                    frameborder="0" style="border:0" allowfullscreen>
             </iframe>
         </div>
     </div>
 </div>
 <div class="subscribe">
-    <div class="center_main clearfix">
+    <div class="centr_main clearfix">
         <h2><strong>Sign up</strong> for exclusive sales and product news</h2>
         <div class="subscribe-form">
             <form action="" method="get">
@@ -191,6 +191,74 @@
         </div>
     </div>
 </div>
+<footer class="ftr">
+    <div class="block4-maine centr_main clearfix">
+        <article>
+            <h2>Our Stores</h2>
+            <div class="ftr_block_content">
+                <p>Feel free to visit our stores or contact us.
+                    1401 South Grand Avenue<br>
+                    Los Angeles, CA 90015<br>
+                    (213) 748-2411</p>
+                <p>100 Fairview Drive<br>
+                    Franklin, VA 23851<br>
+                    (757) 569-6100 </p>
+            </div>
+        </article>
+        <article>
+            <h2>Blog posts</h2>
+            <div class="ftr_block_content">
+                <h3><a href="#">Justin Bieber confirmed that he is gay.</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Donec sed auctor elit.</p>
+                <h3><a href="#">New sexy sport clothes are here!</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Donec sed auctor elit.</p>
+                <h3><a href="#">Summer sales are coming!</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Donec sed auctor elit.</p>
+            </div>
+        </article>
+        <article>
+            <h2>Support</h2>
+            <div class="ftr_block_content">
+                <p class="support">
+                    <a href="#">Terms & Conditions</a>
+                    <a href="#">FAQ</a>
+                    <a href="#">Payment</a>
+                    <a href="#">Refunds</a>
+                    <a href="#">Track Order</a>
+                    <a href="#">Services</a>
+                    <a href="#">Privacy & Security</a>
+                    <a href="#">Careers</a>
+                    <a href="#">Press</a>
+                    <a href="#">Corporate Information</a>
+                </p>
+                <p class="support">
+                    <a href="#">Sizing</a>
+                    <a href="#">Ordering</a>
+                    <a href="#">Shipping</a>
+                    <a href="#">Return Policy</a>
+                    <a href="#">Affiliates</a>
+                    <a href="#">Find A Store </a>
+                    <a href="#">Site Map</a>
+                    <a href="#">Sign Up & Save</a>
+                </p>
+            </div>
+        </article>
+        <article>
+            <h2>Contact us</h2>
+            <div class="ftr_block_content">
+                <form>
+                    <input class="ftr_mail"  type="email" placeholder="your e-mail...">
+                    <textarea class="ftr_text" placeholder="your text..."></textarea>
+                    <input class="ftr_submit" type="submit" value="Send MESSAGE">
+
+                </form>
+            </div>
+        </article>
+    </div>
+</footer>
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/unslider-min.js"></script>
 <script>
@@ -219,5 +287,6 @@
 </script>
 </body>
 </html>
+
 
 
